# de-ai-agent

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  ai-git-pollution-review.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/de_ai_agent/: __init__.py  hook.py
tests/: __init__.py  test_e2e.py  test_hook.py
