[project]
name = "de-ai-agent"
version = "0.2.0"
description = "Pre-commit hook that removes AI pollution from commit messages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Krzysztof Wesolowski", email = "kwesoly@kwesoly.net" }]

[project.scripts]
de-ai-agent = "de_ai_agent.hook:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = ["slow: marks tests as slow (git subprocess calls)"]
addopts = "--cov=de_ai_agent --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "PLR"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
